--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       scroll-behavior: smooth;
     }
     body {
-      background-color: #f7f7f7;
+      background-color: #feffed;
       color: #333;
       line-height: 1.6;
     }
@@ -89,6 +89,12 @@
       margin-bottom: 20px;
       color: #c59d5f;
     }
+    .h2{
+      font-size: 2.4rem;
+      margin-bottom: 20px;
+      color: #c59d5f;
+    }
+    
     .about p {
       font-size: 1.2rem;
       margin-bottom: 40px;
@@ -243,17 +249,24 @@
     </li>
 </ul>
 </section>
+<div class="hours"> <h2>Galerie</h2>
+<p>Einige unserer Fotos</p></div>
 <div class="gallery" id="gallery">
 <img alt="Innenbereich des Cafés" src="photo1.jpeg"/>
 <img alt="Tische und Atmosphäre" src="photo2.jpeg"/>
 <img alt="Barista bei der Arbeit" src="photo3.jpeg"/>
 </div>
+<div class="hours"> <h2>Menü</h2>
+  <p>Auf unserer schönen Speisekarte können Sie sehen, was wir tun und wie die Preise pro Produkt lauten.</p></div>
 <!-- Carousel Container -->
 <div class="carousel-wrapper">
 <div id="menu" class="carousel-wrapper">
   <div class="carousel-track" id="carouselTrack">
     <img src="menu1.png" alt="Menu 1" class="carousel-image" onclick="openPopup(this.src)">
     <img src="menu2.png" alt="Menu 2" class="carousel-image" onclick="openPopup(this.src)">
+    <img src="menu3.jpg" alt="Menu 2" class="carousel-image" onclick="openPopup(this.src)">
+    <img src="menu4.jpg" alt="Menu 2" class="carousel-image" onclick="openPopup(this.src)">
+
   </div>
   <button class="carousel-btn left" onclick="prevSlide()">‹</button>
   <button class="carousel-btn right" onclick="nextSlide()">›</button>
